--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -8,6 +8,10 @@
         <UL>
             {% for state in states %}
             <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+                <UL>
+                    {% for city in state.cities %}
+                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                </UL>
             {% endfor %}
         </UL>
     </BODY>
