--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -11,6 +11,7 @@
                 <UL>
                     {% for city in state.cities %}
                     <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                    {% endfor %}
                 </UL>
             {% endfor %}
         </UL>
