--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -11,8 +11,8 @@
             <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
             {% endfor %}
         </UL>
-        {% elif states is defined %}
-        <H1>State: {{ States.name }}</H1>
+        {% elif state is defined %}
+        <H1>State: {{ state.name }}</H1>
         <H3>Cities:</H3>
         <UL>
             {% for city in state.cities|sort(attribute='name') %}
