--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -11,11 +11,11 @@
             <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
             {% endfor %}
         </UL>
-        {% elif state is defined %}
-        <H1>State: {{ state.name }}</H1>
+        {% elif states is defined %}
+        <H1>State: {{ states.name }}</H1>
         <H3>Cities:</H3>
         <UL>
-            {% for city in state.cities|sort(attribute='name') %}
+            {% for city in states.cities|sort(attribute='name') %}
             <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
             {% endfor %}
         </UL>
