--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -1,209 +1,128 @@
 .places {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin: 45px auto;
-	text-align: center;
+    text-align: center;
+}
+
+.places h1 {
+    text-align: left;
+    font-size: 30px;
 }
 
 article {
-	display: flex;
-	width: 390px;
-	flex: none;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-content: flex-start;
-
-	padding-top: 10px;
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 40px;
-	margin: 20px;
-
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
+    width: 390px;
+    padding: 20px;
+    margin: 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    display: inline-block;
+    vertical-align: top;
+    min-height: 250px;
 }
 
-.headline {
-	display: flex;
-	flex-direction: row;
-	position: relative;
-
-	height: 80px;	
-	width: 100%;
+article h2 {
+    font-size: 30px;
+    margin-top: 15px;
 }
 
-.price_by_night {
-	display: flex;
-	justify-content: center;
-	align-self: flex-end;
-
-	position: absolute;
-	right: 0;
-
-	line-height: 60px;
-	color: #FF5A5F;
-	font-size: 30px;
-	padding: 5px;
-	border: 4px solid #FF5A5F;
-	border-radius: 100%;
-	float: right;
-	min-width: 60px;
-	height: 60px;
-}
-
-.information {
-	display: block;
-	height: 80px;
-	width: 100%;
-	border-top: 1px solid #DDDDDD;
-	border-bottom: 1px solid #DDDDDD;
-
-	padding-top: 5px;
-	padding-bottom: 12px;
-	margin-top: 10px;
-	margin-bottom: 20px;
-}
-
-.max_guest, .number_rooms, .number_bathrooms {
-	display: inline-block;
-	width: 100px;
-	text-align: center;
-	margin: 0px auto;
-}
-
-.user {
-	margin-top: 5px;
-	margin-bottom: 5px;	
-}
-
-.description {
-	text-align: left;
-}
-
-h1 {
-	display: block;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
-}
-
-article .amenities {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	margin-top: 40px;
-}
-
-.article_subtitle {
-	font-size: 16px;
-	text-align: left;
-	width: 100%;
-	border-bottom: 1px solid #DDDDDD;
-	padding: 0px;
-	margin: 0px;
-	padding-bottom: 10px;
-}
-
-.article_title {
-	font-size: 30px;
-	margin: 10px auto;
-	padding: 0px;
-}
-
-article ul {
-	text-align: left;
-	margin-top: 20px;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
-}
-
-article li {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-content: flex-start;
-	margin-bottom: 10px;
-}
-
-.reviews {
-	margin-top: 40px;
-	width: 100%;
-}
-
-.review_item {
-	margin-bottom: 10px;
-}
-
-.review_text {
-	margin: 0px;
-}
-
-article h3 {
-	font-size: 14px;
-	padding: 0px;
-	margin: 0px;
-	margin-bottom: 5px;
+div.price_by_night {
+    color: #FF5A5F;
+    border: 4px solid #FF5A5F;
+    border-radius: 100%;
+    min-width: 60px;
+    height: 60px;
+    line-height: 60px;
+    font-size: 30px;
+    position: relative;
+    float: right;
+    top: -80px;
 
 }
 
-.guest_icon {
-	display: inline-block;
-	background-image: url("../images/icon_group.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 50px;
-	height: 50px;
+div.information {
+    height: 80px;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
 }
 
-.bed_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bed.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
+div.max_guest,
+div.number_rooms,
+div.number_bathrooms {
+    width: 100px;
+    height: 100%;
+    line-height: 130px;
+    background-repeat: no-repeat;
+    background-position: 50% 5px;
+    display: inline-block;
+    position: relative;
+    left: 30px;
 }
 
-.bath_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bath.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
+div.max_guest {
+    background-image: url("../images/icon_group.png");
 }
 
-.tv_icon {
-	display: inline-block;
-	background-image: url("../images/icon_tv.png");
-	background-size: cover;
-	width: 20px;
-	height: 20px;
-
-	margin-right: 10px;
+div.number_rooms {
+    background-image: url("../images/icon_bed.png");
 }
 
-.wifi_icon {
-	display: inline-block;
+div.number_bathrooms {
+    background-image: url("../images/icon_bath.png");
+}
+
+div.user,
+div.description {
+    text-align: left;
+    margin-top: 15px;
+    margin-bottom: 0px;
+}
+
+.places div.amenities,
+.places div.reviews {
+    margin-top: 40px;
+    width: 100%;
+    display: inline-block;
+}
+
+.places div.amenities h2,
+.places div.reviews h2 {
+    font-size: 16px;
+    border-bottom: 1px solid #DDDDDD;
+    text-align: left;
+    line-height: 30px;
+}
+
+.places div.amenities ul,
+.places div.reviews ul {
+    text-align: left;
+    padding-left: 0px;
+}
+
+.places div.amenities li {
+    height: 100%;
+    line-height: 40px;
+    width: 100px;
+    padding-left: 50px;
+    background-repeat: no-repeat;
+    background-size: 35px;
+}
+
+.places div.amenities li.one {
+    background-image: url("../images/icon_tv.png");
+}
+
+.places div.amenities li.two {
     background-image: url("../images/icon_wifi.png");
-    background-size: cover;
-	width: 20px;
-    height: 20px;
-
-	margin-right: 10px;
 }
 
-.pet_icon {
-	display: inline-block;
+.places div.amenities li.three {
     background-image: url("../images/icon_pets.png");
-	background-size: cover;
-    width: 20px;
-	height: 20px;
+}
 
-	margin-right: 10px;
+.places div.amenities h3,
+.places div.reviews h3 {
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.places div.reviews p {
+    font-size: 12px;
 }
