--- a/web_static/styles/103-common.css
+++ b/web_static/styles/103-common.css
@@ -1,13 +1,30 @@
 body {
-	margin:0px;
-	padding:0px;
-
-	color: #484848;
-	font-size: 14px;
-	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 50px;
+    color: #484848;
+    font-size: 15px;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-.container {
+div.container {
     max-width: 1000px;
     margin: 30px auto;
+}
+
+/* Responsive design elements for smaller screens */
+@media (max-width: 768px) {
+    /* body {
+        overflow: hidden;
+    } */
+
+    div.container {
+        max-width: 90%;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1016px) {
+    div.container {
+        max-width: 90%;
+    }
 }
