--- a/web_static/styles/103-filters.css
+++ b/web_static/styles/103-filters.css
@@ -1,101 +1,114 @@
-.filters {
-	display: block;
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-}
-
-.locations {
-	display: inline;
-	vertical-align: middle;
-	float: left;
-	height: 100%;
-	width: 25%;
-
-	line-height: 20px;
-	border-right: 1px solid #DDDDDD;
-}
-
-.filter_amenities {
-	display: inline;
-	vertical-align: middle;
-	height: 100%;
-	float: left;
-    width: 25%;
-
-	line-height: 20px;
-}
-
-.popover {
-	list-style-type: none;
-	display: none;
-	background-color: #FAFAFA;
-	width: 100%;
-
-	margin-left: -1px;
-	margin-top: 8px;
-	padding: 25px 0px;
-
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-}
-
-.locations:hover .popover {
-	display: inline-block;
-}
-
-.filter_amenities:hover .popover {
-	display: inline-block;
-}
-
-ul {
-	list-style-type: none;
-	padding: 0px;
-	padding-bottom: 20px;
-}
-
-li {
-}	
-
-h2 {
-	font-size: 16px;
-	padding-left: 30px;
-	margin: 0px;
-}
-
-h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
-	padding-left: 45px;
-}
-
-h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	padding-left: 45px;
+section.filters {
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 2px solid #DDDDDD;
+    border-radius: 4px;
 }
 
 button {
-	color: #FFFFFF;
-	font-size: 18px;
-	
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: #FFFFFF;
+    height: 48px;
+    width: 20%;
+    border: 0;
+    border-radius: 4px;
+    margin: 11px 30px;
+    float: right;
 }
 
 button:hover {
-	opacity: 90%;
+    opacity: 90%;
+}
+
+.locations {
+    border-right: #DDDDDD solid 2px;
+}
+
+.locations,
+.amenities {
+    height: 100%;
+    width: 25%;
+    float: left;
+}
+
+.locations h3,
+.amenities h3 {
+    font-weight: 600;
+    margin-bottom: 0;
+    margin-left: 30px;
+    text-align: left;
+}
+
+.locations h4,
+.amenities h4 {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0px 0px 0px 30px;
+    text-align: left;
+}
+
+.popover {
+    display: none;
+    background-color: #FAFAFA;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    position: relative;
+    z-index: 1;
+    text-align: left;
+    margin-top: 15px;
+    padding: 5px 20px;
+}
+
+.popover h2 {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+li {
+    list-style-type: none;
+}
+
+.popover li {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.locations:hover .popover,
+.amenities:hover .popover {
+    display: block;
+}
+
+/* Responsive design elements for smaller screens */
+@media (max-width: 632px) {
+    section.filters {
+        height: 85px;
+    }
+
+    button {
+        width: 25%;
+        margin: 18px 30px;
+    }
+
+    .locations,
+    .amenities {
+        width: 25%;
+    }
+}
+
+@media (min-width: 632px) and (max-width: 769px) {
+    section.filters {
+        height: 70px;
+    }
+
+    button {
+        width: 20%;
+        margin: 11px 30px;
+    }
+
+    .locations,
+    .amenities {
+        width: 30%;
+    }
 }
