--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -18,27 +18,24 @@
                     <h3>States</h3>
                     <h4>&nbsp;</h4>
                     <ul class="popover">
-                        <li><h2>Arizona:</h2>
+                    {% for state in states.values()|sort(attribute='name') %}
+                        <li><h2>{{ state.name }}</h2>
                             <ul>
-                                <li>Page</li>
-                                <li>Page2</li>
+                            {% for city in state.cities|sort(attribute='name') %}
+                                <li>{{ city.name }}</li>
+                            {% endfor %}
                             </ul>
                         </li>
-                        <li><h2>California:</h2>
-                            <ul>
-                                <li>San Francisco</li>
-                                <li> Los Altos</li>
-                            </ul>
+                    {% endfor %}
                     </ul>
                 </div>
                 <div class="amenities">
                     <h3>Amenities</h3>
                     <h4>&nbsp;</h4>
                     <ul class="popover">
-                        <li>Internet</li>
-                        <li>TV<li>
-                        <li>Kitchen</li>
-                        <li>Iron</li>
+                    {% for amenity in amenities.values()|sort(attribute='name') %}
+                        <li>{{ amenity.name }}</li>
+                    {% endfor %}
                     </ul>
                 </div>
 	            <button>Search</button>
