--- a/web_flask/static/styles/4-common.css
+++ b/web_flask/static/styles/4-common.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    padding-bottom: 50px;
     color: #484848;
     font-size: 14px;
     font-family: Circular, "Helvetica Neue", Arial, sans-serif;
