--- a/web_static/styles/103-filters.css
+++ b/web_static/styles/103-filters.css
@@ -27,7 +27,7 @@ button:hover {
 }
 
 .locations,
-.amenities {
+section.filters .amenities {
     height: 100%;
     width: 25%;
     float: left;
@@ -59,6 +59,8 @@ button:hover {
     text-align: left;
     margin-top: 15px;
     padding: 5px 20px;
+    overflow: auto;
+    max-height: 300px;
 }
 
 .popover h2 {
@@ -92,7 +94,7 @@ li {
     }
 
     .locations,
-    .amenities {
+    section.filters .amenities {
         width: 25%;
     }
 }
@@ -108,7 +110,7 @@ li {
     }
 
     .locations,
-    .amenities {
+    section.filters .amenities {
         width: 30%;
     }
 }
