--- a/web_static/styles/103-header.css
+++ b/web_static/styles/103-header.css
@@ -6,6 +6,7 @@ header {
 }
 
 div.logo img {
-    display: block;
-    margin: auto 20px;
+    display: inline-block;
+    margin-left: 20px ;
+    margin-top: 4px;
 }
