--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -4,6 +4,7 @@ div.container {
     margin: 30px auto;
     /* text-align: center; */
 }
+
 section.filters {
     background-color: white;
     height: 70px;
@@ -11,6 +12,7 @@ section.filters {
     border: 1px solid #DDDDDD;
     border-radius: 4px;
 }
+
 section.filters button {
     background-color: #FF5A5F;
     height: 48px;
@@ -22,19 +24,23 @@ section.filters button {
     float: right;
     margin: 11px 30px;
 }
+
 section.filters button:hover {
     opacity: .9;
 }
+
 /* location and amenities part of search bar */
 .locations,
-.amenities {
+section.filters .amenities {
     height: 100%;
     width: 25%;
     float: left;
 }
+
 .locations {
     border-right: 1px solid #DDDDDD;
 }
+
 .locations h3,
 .amenities h3 {
     font-weight: 600;
@@ -44,6 +50,7 @@ section.filters button:hover {
     text-align: left;
     margin-left: 30px;
 }
+
 .locations h4,
 .amenities h4 {
     font-weight: 400;
@@ -53,6 +60,7 @@ section.filters button:hover {
     text-align: left;
     margin-left: 30px;
 }
+
 /* display location and amenities options upon hover */
 .popover {
     display: none;
@@ -62,14 +70,17 @@ section.filters button:hover {
     position: relative;
     z-index: 1;
 }
+
 .popover h2 {
     font-size: 16px;
 }
+
 li {
     list-style-type: none;
     margin-top:10px;
     margin-bottom: 10px;
 }
+
 .locations:hover .popover,
 .amenities:hover .popover {
     display: block;
