--- a/web_static/styles/102-filters.css
+++ b/web_static/styles/102-filters.css
@@ -27,9 +27,9 @@ button:hover {
 }
 
 .locations,
-section.filters .amenities {
+.amenities {
     height: 100%;
-    width: 25%;
+    width: 30%;
     float: left;
 }
 
@@ -47,23 +47,29 @@ section.filters .amenities {
     font-size: 14px;
     margin: 0px 0px 0px 30px;
     text-align: left;
+    white-space: nowrap;
+    width: 60%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .popover {
     display: none;
     background-color: #FAFAFA;
-    border: 1px solid #DDDDDD;
+    border: 1px solid hsl(0, 0%, 87%);
     border-radius: 4px;
     position: relative;
     z-index: 1;
     text-align: left;
-    margin-top: 20px;
+    margin-top: 19px;
     padding: 5px 20px;
+
 }
 
 .popover h2 {
     font-size: 16px;
     margin-bottom: 10px;
+    margin-left: 15px;
 }
 
 li {
@@ -73,26 +79,14 @@ li {
 .popover li {
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-left: 10px;
+}
+
+.locations .popover li {
+    margin-left: -5px;
 }
 
 .locations:hover .popover,
 .amenities:hover .popover {
     display: block;
-}
-
-/* Responsive design elements for smaller screens */
-@media (max-width: 768px) {
-    section.filters {
-        height: 85px;
-    }
-
-    button {
-        width: 30%;
-        margin: 18px 20px;
-    }
-
-    .locations,
-    .amenities {
-        width: 28%;
-    }
 }
