--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -59,4 +59,8 @@ section.filters button:hover {
     margin-bottom: 0px;
     text-align: left;
     margin-left: 30px;
+    white-space: nowrap;
+    width: 60%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
